mongodb cluster added

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017/RoxilerSystem-Assi
+MONGO_URI=mongodb+srv://offerzone009:K1h6iAQHhnfre8lg@cluster0.i1tac.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
