--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",     
-    "dev": "nodemon app.js"     
+    "dev": "node app.js"     
   },
   "dependencies": {
     "axios": "^1.7.7",
