--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "Backend for MERN stack app",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",     
+    "start": "nodemon app.js",     
     "dev": "node app.js"     
   },
   "dependencies": {
